--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>{{ page.title }}</title>
-    
+    <!-- link to main stylesheet -->    
     <link rel="stylesheet" type="text/css" href="/css/main.css">
   
   </head>
@@ -12,14 +12,15 @@
     <nav>
 <ul>
 <li><a href="/">Home</a></li>
-<li><a href="/cv">CV</a></li>
+<li><a href="/about">About</a></li>
+<li><a href="/blog">Blog</a></li>
 </ul>
     </nav>
 <div class="container">
 
   {{ content }}
 
-</div>
+</div><!-- /.container -->
   
   <footer>
    <ul>
