--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script> <!--This allows display of latex. Based on http://www.iangoodfellow.com/blog/jekyll/markdown/tex/2016/11/07/latex-in-markdown.html-->>
-<h1>{{ page.title }}</h1>
+<h1>{{ page.title | replace '_', ' '  }}</h1>
 <p class="meta">{{ page.date | date_to_string }}</p>
 
 <div class="notes">
