--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,9 +15,9 @@ comments: true
     <hr>
     
     <!-- Post comments -->
-			<div class="notecomments">
-				{% include disqus.html %}	 
-			</div>
+{% if page.comments %} 
+	 {% include disqus.html %}
+{% endif %}
   </div>
 </div>
 
