--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -12,7 +12,7 @@ var disqus_config = function () {
 
 (function() { // DON'T EDIT BELOW THIS LINE
 var d = document, s = d.createElement('script');
-s.src = 'https://afinneg2_blog.disqus.com/embed.js';
+s.src = 'https://https-afinneg2-github-io.disqus.com/embed.js';
 s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
 })();
