--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,6 +16,7 @@ comments: true
   </div>
 </div>
 <!-- Post comments -->
+Subscribe <a href="/feed.xml">via ATOM</a>
 {% include disqus.html %}
 <!--<div class="post">
   {{ content }}
