--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <title>{{ page.title }}</title>
     <!-- link to main stylesheet -->    
     <link rel="stylesheet" type="text/css" href="/css/main.css">
-    <link href="feed.xml" type="application/atom+xml" rel="alternate" title="Sitewide Atom feed" />  
+    <link href="/feed.xml" type="application/atom+xml" rel="alternate" title="Alex Finnegan's blog feed" />  
   </head>
 
 
